--- a/css/style.css
+++ b/css/style.css
@@ -72,9 +72,19 @@ img.portraits {
     height: 100px;
 }
 
+img.project_banner {
+    float: right;
+    width: 300px;
+    height: 300px;
+}
+
 p.profile {
     margin-block-start: 0px;
     margin-block-end: 0px;
+}
+
+p.project_intro {
+    min-height: 300px;
 }
 
 .pinboard_title {
