--- a/css/style.css
+++ b/css/style.css
@@ -70,11 +70,22 @@ ul.navul {
     padding: 0px;
 }
 
-li.navli {
+.primebutton {
     color: var(--prime-block-bg-color);
-    list-style-type: none;
     border: 2px solid var(--prime-block-bg-color);
     text-align: center;
+}
+
+.primebutton:hover {
+    color: var(--main-text-color);
+    background-color: var(--prime-block-bg-color);
+    border: 2px solid var(--prime-block-bg-color);
+    text-align: center;
+}
+
+
+li.navli {
+    list-style-type: none;
     margin-top: 10px;
     margin-bottom: 10px;
     padding-top: 10px;
@@ -82,11 +93,7 @@ li.navli {
 }
 
 li.navli:hover {
-    color: var(--main-text-color);
-    background-color: var(--prime-block-bg-color);
     list-style-type: none;
-    border: 2px solid var(--prime-block-bg-color);
-    text-align: center;
     margin-top: 10px;
     margin-bottom: 10px;
     padding-top: 10px;
@@ -154,6 +161,12 @@ img.project_banner {
     height: 300px;
 }
 
+img.publication_figure {
+    float: right;
+    width: 300px;
+    height: 300px;
+}
+
 p.profile {
     margin-block-start: 0px;
     margin-block-end: 0px;
@@ -171,4 +184,23 @@ p.project_intro {
 .project h2 {
     margin-left: 17px;
     color: var(--title-text-color);
+}
+
+.publication h2 {
+    margin-left: 17px;
+    color: var(--title-text-color);
+}
+.publication h3 {
+    margin-left: 17px;
+    color: var(--secondary-title-text-color);
+}
+
+a.publink {
+    display: inline-block;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+div.publication {
+    margin-bottom: 3em;
 }
