--- a/css/style.css
+++ b/css/style.css
@@ -29,13 +29,17 @@ html {
     font-size: 14px;
 }
 
-div#header * {
-    color: var(--main-text-color);
+div#header h1 {
+    font-size: 2em;
+    color: var(--title-text-color);
+    margin-block-end: 0.2em;
 }
 
 div#header h2 {
     font-size: 1.2em;
-    margin-bottom: 2px;
+    margin-block-start: 0.2em;
+    margin-block-end: 0.5em;
+    color: var(--main-text-color);
 }
 
 hr {
